#src/Makefile.am

lib_LTLIBRARIES = \
	libas511.la

libas511_la_SOURCES = \
	as511_ag_run.c \
	as511_ag_stop.c \
	as511_change_operating_mode.c \
	as511_compress_ram.c \
	as511_ctrl_output.c \
	as511_delete_module_all.c \
	as511_delete_module.c \
	as511_read_bstack.c \
	as511_read_cpu_typ.c \
	as511_read_module_addr_list.c \
	as511_read_module.c \
	as511_read_module_info.c \
	as511_read_ram.c \
	as511_read_ram_info.c \
	as511_read_system_parameter.c \
	as511_read_ustack.c \
	as511_status_module.c \
	as511_status_var.c \
	as511_step_module.c \
	as511_write_module.c \
	as511_write_ram.c \
	mem.c \
	s5lib.c \
	wrapers.c

include_HEADERS = \
	as511.h \
	as511_mem.h \
	as511_s5lib.h \
	as511_ustack.h
